--- a/src/Brobot.Api/appsettings.json
+++ b/src/Brobot.Api/appsettings.json
@@ -6,5 +6,8 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
+  "ConnectionStrings": {
+    "Default": "Data Source=(localdb)\\mssqllocaldb;Initial Catalog=Brobot;Integrated Security=SSPI;"
+  },
   "AllowedHosts": "*"
 }
