--- a/src/Brobot.Api/appsettings.Development.json
+++ b/src/Brobot.Api/appsettings.Development.json
@@ -6,7 +6,7 @@
       "Microsoft.Hosting.Lifetime": "Information"
     },
     "ConnectionStrings": {
-      "Default": "Data Source=(localdb)\\mssqllocaldb;Initial Catalog=Brobot;Integrated Security=SSPI;"
+      "Default": "User ID=brobot;Password=brobot;Host=localhost;Port=5555;Database=brobot;"
     }
   }
 }
