--- a/src/Brobot.Api/appsettings.json
+++ b/src/Brobot.Api/appsettings.json
@@ -7,7 +7,7 @@
     }
   },
   "ConnectionStrings": {
-    "Default": "Data Source=(localdb)\\mssqllocaldb;Initial Catalog=Brobot;Integrated Security=SSPI;"
+    "Default": "User ID=brobot;Password=brobot;Host=localhost;Port=5555;Database=brobot;"
   },
   "AllowedHosts": "*"
 }
