--- a/src/Brobot.Sync/Dockerfile
+++ b/src/Brobot.Sync/Dockerfile
@@ -5,6 +5,7 @@ COPY Brobot.sln Brobot.sln
 COPY src/Brobot.Core/Brobot.Core.csproj src/Brobot.Core/Brobot.Core.csproj
 COPY src/Brobot.Api/Brobot.Api.csproj src/Brobot.Api/Brobot.Api.csproj
 COPY src/Brobot.Sync/Brobot.Sync.csproj src/Brobot.Sync/Brobot.Sync.csproj
+COPY src/Brobot.Monitor/Brobot.Monitor.csproj src/Brobot.Monitor/Brobot.Monitor.csproj
 
 RUN dotnet restore Brobot.sln
 
@@ -12,7 +13,7 @@ COPY . .
 WORKDIR /app/src/Brobot.Sync
 RUN dotnet publish -c Release -o /out
 
-FROM mcr.microsoft.com/dotnet/core/aspnet:3.1
+FROM mcr.microsoft.com/dotnet/core/runtime:3.1
 WORKDIR /app
 COPY --from=build-env /out .
 ENTRYPOINT ["dotnet", "Brobot.Sync.dll"]
