--- a/src/Brobot.Commands/Dockerfile
+++ b/src/Brobot.Commands/Dockerfile
@@ -11,10 +11,10 @@ COPY src/Brobot.Commands/Brobot.Commands.csproj src/Brobot.Commands/Brobot.Comma
 RUN dotnet restore Brobot.sln
 
 COPY . .
-WORKDIR /app/src/Brobot.Api
+WORKDIR /app/src/Brobot.Commands
 RUN dotnet publish -c Release -o /out
 
-FROM mcr.microsoft.com/dotnet/core/aspnet:3.1
+FROM mcr.microsoft.com/dotnet/core/runtime:3.1
 WORKDIR /app
 COPY --from=build-env /out .
-ENTRYPOINT ["dotnet", "Brobot.Api.dll"]
+ENTRYPOINT ["dotnet", "Brobot.Commands.dll"]
