--- a/src/Brobot.Api/Dockerfile
+++ b/src/Brobot.Api/Dockerfile
@@ -7,6 +7,7 @@ COPY src/Brobot.Api/Brobot.Api.csproj src/Brobot.Api/Brobot.Api.csproj
 COPY src/Brobot.Sync/Brobot.Sync.csproj src/Brobot.Sync/Brobot.Sync.csproj
 COPY src/Brobot.Monitor/Brobot.Monitor.csproj src/Brobot.Monitor/Brobot.Monitor.csproj
 COPY src/Brobot.Commands/Brobot.Commands.csproj src/Brobot.Commands/Brobot.Commands.csproj
+COPY src/Brobot.Jobs/Brobot.Jobs.csproj src/Brobot.Jobs/Brobot.Jobs.csproj
 
 RUN dotnet restore Brobot.sln
 
